--- a/index.html
+++ b/index.html
@@ -25,6 +25,98 @@
                 <a href="#" class="btn btn--white">Discover more tours</a>
             </div>
         </header>
-        
+         
+        <main>
+            <section class="section-about">
+                <div class="u-center-text u-margin-bottom">
+                    <h2 class="heading-secondary">
+                        Exciting tours for adventurous peoples
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <h2 class="heading-tertiary">You are going to fall in love with nature</h2>
+                        <p class="paragraph">Lorem, ipsum dolor sit amet consectetur 
+                            adipisicing elit. Cumque fuga, veritatis reprehenderit expedita
+                            quae nam. Recusandae nobis aliquid debitis magni beatae aspernatur
+                            iusto, consequatur nostrum maxime voluptatem quos pariatur
+                            consequuntur.
+                        </p>
+                        <h2 class="heading-tertiary">Live adventures like you never had before</h2>
+                        <p class="paragraph">Lorem, ipsum dolor sit amet consectetur 
+                            adipisicing elit. Cumque fuga, veritatis reprehenderit expedita
+                            quae nam. Recusandae nobis aliquid debitis magni beatae aspernatur
+                            iusto, consequatur nostrum maxime voluptatem quos pariatur
+                            consequuntur.
+                        </p>
+                    </div>
+                    <div class="col-1-of-2">
+                        IMAGE AREA
+                    </div>
+                </div>
+            </section>
+        </main>
+        <!-- <section class="grid-test">
+            <div class="row">
+                <div class="col-1-of-2">
+                    Col-1-of-2
+                </div>
+                <div class="col-1-of-2">
+                    Col-1-of-2
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-3">
+                    Col-1-of-3
+                </div>
+                <div class="col-1-of-3">
+                    Col-1-of-3
+                </div>
+                <div class="col-1-of-3">
+                    Col-1-of-3
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-3">
+                    Col-1-of-3
+                </div>
+                <div class="col-2-of-3">
+                    Col-2-of-3
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-4">
+                    Col-1-of-4
+                </div>
+                <div class="col-1-of-4">
+                    Col-1-of-4
+                </div>
+                <div class="col-1-of-4">
+                    Col-1-of-4
+                </div>
+                <div class="col-1-of-4">
+                    Col-1-of-4
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-4">
+                    Col-1-of-4
+                </div>
+                <div class="col-1-of-4">
+                    Col-1-of-4
+                </div>
+                <div class="col-2-of-4">
+                    Col-2-of-4
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-4">
+                    Col-1-of-4
+                </div>
+                <div class="col-3-of-4">
+                    Col-3-of-4
+                </div>
+            </div>
+        </section> -->
     </body>
 </html>
